--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,3 +32,27 @@
 ::after {
   --tw-content: "";
 }
+
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #414144;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #e5e7eb;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+  opacity: 0.7;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
+}
+
+.ant-empty-description {
+  color: #ffffff !important;
+}
